# SDL2-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.clangd/index/: AnimationComponent.h.0883B4E103E0AA69.idx  ColliderComponent.cpp.389DBF045A44DF55.idx  ColliderComponent.h.8FBE4D5CD0EA065C.idx  Collision.cpp.8604792AA5F774B3.idx  Collision.h.4CE9D85A4901C08A.idx  Components.h.FC3913632AFE557A.idx  ECS.cpp.1CDB7BA2A8837C3A.idx  ECS.h.00685EB67BA44F31.idx  Game.cpp.8395E71A718F64B4.idx  Game.h.A93BEF3EEE173319.idx  GameObject.cpp.2ED1A9BBF3EBB091.idx  GameObject.h.53E2B96A41F1BF82.idx  KeyboardController.cpp.B266C151144B37C5.idx  KeyboardController.h.C8ABF30DB21E8BD3.idx  Map.cpp.24F688161A933002.idx  Map.h.D5001D6D66EB2EDF.idx  SpriteComponent.cpp.B436719135CEAA78.idx  SpriteComponent.h.4620954275254322.idx  TextureManager.cpp.471B4AB887FE7FC5.idx  TextureManager.h.B672ADB9F104C6A4.idx  (+7 more)
Map/: Dirt (temp).tsx  Grass.tsx  Map.tmx  Map_Base.csv  Map_Dirt.csv  Map_Grass.csv  Water (temp).tsx
Textures/: 5x5_map.map
src/: CMakeLists.txt
src/Collision/: Collision.cpp  Collision.h
src/ECS/: AnimationComponent.h  ColliderComponent.cpp  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.cpp  KeyboardController.h  SpriteComponent.cpp  SpriteComponent.h  TileComponent.cpp  TileComponent.h  TransformComponent.cpp  TransformComponent.h
src/Game/: Game.cpp  Game.h
src/GameObject/: GameObject.cpp  GameObject.h
src/Map/: Map.cpp  Map.h
src/TextureManager/: TextureManager.cpp  TextureManager.h
src/Vector2D/: Vector2D.cpp  Vector2D.h
